fixed incositent spacing between heading  and content

--- a/src/components/home/FAQ/index.module.css
+++ b/src/components/home/FAQ/index.module.css
@@ -3,7 +3,6 @@
 }
 
 .layout {
-  padding-inline: 1.25rem;
   padding-block: 6rem;
   margin-inline: auto;
 }
