--- a/src/components/home/Partner/index.module.css
+++ b/src/components/home/Partner/index.module.css
@@ -1,5 +1,4 @@
 .layout {
-  padding-inline: 1.25rem;
   padding-block: 6rem;
   margin-inline: auto;
   display: flex;
