--- a/src/components/layout/ColumnSection/index.module.css
+++ b/src/components/layout/ColumnSection/index.module.css
@@ -30,7 +30,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.5rem;
 }
 
 @media (min-width: 1024px) {
@@ -41,7 +41,6 @@
 .container ul {
   color: rgb(var(--content), 0.8);
   font-size: 1.3rem;
-  margin-top: 1.1rem;
 }
 
 .container li {
